Added details to office area, experimenting with how wordy or not they should be

--- a/HP Labs Main Twine and JS Projects/index.html
+++ b/HP Labs Main Twine and JS Projects/index.html
@@ -403,6 +403,8 @@ You appear to be alone. You&#39;re no more craving other people than food, not a
 
 Do you step forward on the path, or take a moment to rest and breath it in?</tw-passagedata><tw-passagedata pid="15" name="officeStart" tags="wrongVO" position="1751.6666666666665,540.3333333333334" size="100,100">You&#39;re standing at the central kitchen area of an office.
 
+The counter is curved, sleek, white marble top. Fancy instant coffee and expresso machines line the wall, along with a toaster oven. Behind you are two vending machines, one with soda and another with assorted junk food.
+
 [[check the vending machines-&gt;vendingMachines]]
 
 [[enter the door to your left, labeled Toy Room-&gt;officeNToyRoom]]
@@ -411,16 +413,16 @@ Do you step forward on the path, or take a moment to rest and breath it in?</tw-
 
 [[step straight ahead into the lushly vegetated courtyard-&gt;courtyard]]
 
-&lt;img src=&quot;https://hometeamgamedev.com/hp2/empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;These areas are not yet fleshed out, but just navigation is started. This office area might have a blended Apple/MS or trendy startup vibe. Lots of office plants.&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="16" name="underground" tags="" position="1731.6666666666667,246.33333333333331" size="100,100">You hear clicks of a ratchet, swaying chain links, and low pitch rumble of steel on tile as the soda machine slides aside, revealing an elevator entrance.
+&lt;img src=&quot;https://hometeamgamedev.com/hp2/empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;These areas are not yet fleshed out, but just navigation is started. This office area might have a blended Apple/MS or trendy startup vibe. Lots of office plants.&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="16" name="underground" tags="" position="1730,96.33333333333331" size="100,100">You hear clicks of a ratchet, swaying chain links, and low pitch rumble of steel on tile as the soda machine slides aside, revealing an elevator entrance.
 
-[[Step inside the elevator (to distant future tower)-&gt;futureTower]]</tw-passagedata><tw-passagedata pid="17" name="library" tags="" position="1395,538.6666666666666" size="100,100">was thinking very large library, but maybe more a messy used bookstore horading vibe
-[[Enter book world-&gt;insideBook]]</tw-passagedata><tw-passagedata pid="18" name="garden" tags="" position="1732.6666666666667,847" size="100,100">Hedge maze?
+[[Step inside the elevator (to distant future tower)-&gt;futureTower]]</tw-passagedata><tw-passagedata pid="17" name="library" tags="" position="1231.6666666666667,552" size="100,100">was thinking very large library, but maybe more a messy used bookstore horading vibe
+[[Enter book world-&gt;insideBook]]</tw-passagedata><tw-passagedata pid="18" name="garden" tags="" position="1939.3333333333335,898.6666666666667" size="100,100">Hedge maze?
 Classical statues
 
-[[Go to graveyard area-&gt;graveyard]]</tw-passagedata><tw-passagedata pid="19" name="lab" tags="" position="2106,558.3333333333334" size="100,100">Science lab, chemicals and inventions, like a hospital area
+[[Go to graveyard area-&gt;graveyard]]</tw-passagedata><tw-passagedata pid="19" name="lab" tags="" position="2282.6666666666665,536.6666666666667" size="100,100">Science lab, chemicals and inventions, like a hospital area
 
-[[Time machine to 1990 office-&gt;backInTime]]</tw-passagedata><tw-passagedata pid="20" name="graveyard" tags="" position="1737.6666666666667,990.3333333333334" size="100,100">dark, Bloodborne-ish, feels long ago</tw-passagedata><tw-passagedata pid="21" name="insideBook" tags="" position="1238,539.6666666666666" size="100,100">World inside a book, myst inspired but with its own twist</tw-passagedata><tw-passagedata pid="22" name="futureTower" tags="" position="1722.6666666666667,105.33333333333333" size="100,100">overlooking city in all directions
-maybe only see city here with glasses off?</tw-passagedata><tw-passagedata pid="23" name="backInTime" tags="" position="2245,563.3333333333334" size="100,100">1990 version of main office area, start by hearing a fax?</tw-passagedata><tw-passagedata pid="24" name="playerPath2-teleporter" tags="" position="159,58" size="100,100">A loud hum fills your ears. It would hurt if it went on longer, but it&#39;s just long enough to tense up reflexively, as if you could somehow dodge it.
+[[Time machine to 1990 office-&gt;backInTime]]</tw-passagedata><tw-passagedata pid="20" name="graveyard" tags="" position="1944.3333333333335,1042" size="100,100">dark, Bloodborne-ish, feels long ago</tw-passagedata><tw-passagedata pid="21" name="insideBook" tags="" position="1074.6666666666667,553" size="100,100">World inside a book, myst inspired but with its own twist</tw-passagedata><tw-passagedata pid="22" name="futureTower" tags="" position="1721,0" size="100,100">overlooking city in all directions
+maybe only see city here with glasses off?</tw-passagedata><tw-passagedata pid="23" name="backInTime" tags="" position="2421.6666666666665,541.6666666666667" size="100,100">1990 version of main office area, start by hearing a fax?</tw-passagedata><tw-passagedata pid="24" name="playerPath2-teleporter" tags="" position="159,58" size="100,100">A loud hum fills your ears. It would hurt if it went on longer, but it&#39;s just long enough to tense up reflexively, as if you could somehow dodge it.
 
 Your starched collar is warm and moist from sweat. Pulling your tie loose to breathe easier, you glance down just as the lower half of your legs are finishing phasing in. They&#39;ve always advised you not to look down, but now that you finally got the chance to do this, it&#39;s hard to look away. They warned that would probably happen, too.
 
@@ -502,15 +504,60 @@ Rows of empty cubicles are visible through a propped open door.
 
 [[Investigate the office-&gt;officeStart]]
 
-&lt;img src=&quot;https://hometeamgamedev.com/hp2/empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;Your vision comes into focus. The glasses help. You\&#39;re in the reception area of an office. Rows of empty cubicles are visible through a propped open door.&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="32" name="officeNToyRoom" tags="" position="1928.333333333333,573.6666666666666" size="100,100">Prototype room
+&lt;img src=&quot;https://hometeamgamedev.com/hp2/empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;Your vision comes into focus. The glasses help. You\&#39;re in the reception area of an office. Rows of empty cubicles are visible through a propped open door.&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="32" name="officeNToyRoom" tags="" position="1928.333333333333,573.6666666666666" size="100,100">There&#39;s a bizarrely huge boomerang hanging on a wall.
 
-[[leave to the science lab-&gt;lab]]</tw-passagedata><tw-passagedata pid="33" name="vendingMachines" tags="" position="1721.6666666666665,390.3333333333333" size="100,100">Describe what is in the vending machines
+Several orange gel ant farms adorn the shelves, with the insects inside hard at work.
 
-[[mess with the coin return-&gt;underground]]</tw-passagedata><tw-passagedata pid="34" name="cubicles" tags="" position="1566.6666666666665,568.6666666666667" size="100,100">Panels seem to be removable, with some adjacent hex cubicles showing a window exposed between them, as if for coworkers to more easily chat or check on one another during the day.
+You see boxes left around of building blocks, wooden shapes, plastic army figures, and toy cars with conflicting sizes and styles.
 
-[[open the unmarked double doors - west to library-&gt;library]]</tw-passagedata><tw-passagedata pid="35" name="courtyard" tags="" position="1751.6666666666665,690.3333333333334" size="100,100">A net mesh hangs overhead, as if to keep birds from getting in, or maybe butterflies from getting out.
+Posters cover the walls - of kids movies, TV shows you haven&#39;t heard of, ads for classic video and board games.
 
-[[take a closer look at the small garden-&gt;garden]]</tw-passagedata></tw-storydata>
+In the center of the room is a table, with toys lined up on opposing sides as if they&#39;re preparing to battle. In the center of the tiny battlefield stands a tall, futuristic robot mech toy, towering over the other figures.
+
+[[leave to the science lab-&gt;lab]]</tw-passagedata><tw-passagedata pid="33" name="vendingMachines" tags="" position="1721.6666666666665,390.3333333333333" size="100,100">Like most soda machines, it&#39;s all the same brand. Two entire rows are energy drinks, a few options are diet, and there&#39;s at least one brightly colored sweet drink maybe meant for when someone takse their kid to work.
+
+The junk food includes &quot;healthy&quot;(-ier?) chips, cheese-dusted puffs, candy bars, and a few kinds of trail mix.
+
+The prices are too high, but you don&#39;t have your wallet, anyway. The machines are lit inside, with a refridgerator hum coming from the soda one.
+
+A blue on black LCD on the soda machine scrolls with the text, &quot;CANCEL?&quot;
+
+[[mess with the coin return-&gt;underground]]</tw-passagedata><tw-passagedata pid="34" name="cubicles" tags="" position="1566.6666666666665,568.6666666666667" size="100,100">It&#39;s a bit tough to tell, since the cubicles are hexes instead of squares, and just a tad too tall to comfortably see over well, but there seem to be 3 distinct rows.
+
+[[walk down the near row, near the bathroom entrance-&gt;nearHexes]]
+
+[[walk down the center row, past the copier-&gt;midHexes]]
+
+[[walk down the far row, along the windows-&gt;farHexes]]</tw-passagedata><tw-passagedata pid="35" name="courtyard" tags="" position="1751.6666666666665,690.3333333333334" size="100,100">The first thing you notice is a hazy shadow on you, inconsistent with the clear midday sky over head. It&#39;s coming from a net mesh over the whole courtyard, perhaps to keep birds from getting in, or maybe to keep all these pretty butterflies from getting out.
+
+You hear water dribbling, and notice an artificial stream dividing the space, with a small white wooden bridge to cross it.
+
+The tree trunks are adorned with string lights, but they&#39;re either off or too weak to see in this much daylight. The temperature&#39;s comfortable enough that you don&#39;t think it&#39;s December, but this also uncomfortably reminds you that you&#39;re not entirely sure what latitude you&#39;re at.
+
+A few stone benches have a small golden plaque at top of the back center, which you can&#39;t read from here, but look like they&#39;re probably honoring donations or in memory of people.
+
+Although most of the vegetation seems to have been allowed to grow where ever and how ever it wanted, in one corner a particularly tidy, well-kept garden stands out.
+
+[[take a closer look at the small garden-&gt;garden]]</tw-passagedata><tw-passagedata pid="36" name="nearHexes" tags="" position="1416.6666666666665,718.6666666666667" size="100,100">You see 4 cubicles along your left, and the bathrooms to your right.
+
+[[enter Name1 Hex-&gt;cubeNear1]]
+[[enter Name2 Hex-&gt;cubeNear2]]
+[[enter Name3 Hex-&gt;cubeNear3]]
+[[enter Name4 Hex-&gt;cubeNear4]]
+[[enter the bathroom-&gt;bathroom]]</tw-passagedata><tw-passagedata pid="37" name="midHexes" tags="" position="1409.9999999999998,1028.6666666666667" size="100,100">You see 3 cubicle openings, and a space where the copier is set up.
+
+[[enter Name1b Hex-&gt;cubeMid1]]
+[[enter Name2b Hex-&gt;cubeMid2]]
+[[enter Name3b Hex-&gt;cubeMid3]]
+[[check out the copier-&gt;copier]]</tw-passagedata><tw-passagedata pid="38" name="farHexes" tags="" position="1413.3333333333333,1325.3333333333335" size="100,100">You see 4 cubicles along your right, and floor-to-ceiling windows on the other side with a solid sunshade blocking the view.
+
+[[enter Name1c Hex-&gt;cubeFar1]]
+[[enter Name2c Hex-&gt;cubeFar2]]
+[[enter Name3c Hex-&gt;cubeFar3]]
+[[enter Name4c Hex-&gt;cubeFar4]]
+[[look for a way to raise the sun shade-&gt;windowShade]]</tw-passagedata><tw-passagedata pid="39" name="cubeNear1" tags="" position="1116.6666666666665,868.6666666666667" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="40" name="cubeNear2" tags="" position="1266.6666666666665,868.6666666666667" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="41" name="cubeNear3" tags="" position="1416.6666666666665,868.6666666666667" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="42" name="cubeNear4" tags="" position="1566.6666666666665,870.3333333333335" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="43" name="bathroom" tags="" position="1716.6666666666665,868.6666666666667" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="44" name="cubeMid1" tags="" position="1351.6666666666665,1163.6666666666667" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="45" name="cubeMid2" tags="" position="1501.6666666666665,1163.6666666666667" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="46" name="cubeMid3" tags="" position="1651.6666666666665,1163.6666666666667" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="47" name="copier" tags="" position="1171.6666666666665,1168.6666666666667" size="100,100">You&#39;re at the copy machine
+
+[[find some excuse to connect the copier west, to the library-&gt;library]]</tw-passagedata><tw-passagedata pid="48" name="cubeFar1" tags="" position="1113.3333333333333,1475.3333333333335" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="49" name="cubeFar2" tags="" position="1263.3333333333333,1475.3333333333335" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="50" name="cubeFar3" tags="" position="1413.3333333333333,1475.3333333333335" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="51" name="cubeFar4" tags="" position="1563.3333333333333,1475.3333333333335" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="52" name="windowShade" tags="" position="1713.3333333333333,1475.3333333333335" size="100,100">Double-click this passage to edit it.</tw-passagedata></tw-storydata>
 
 <script title="Twine engine code" data-main="harlowe">"use strict";function _defineProperty(e,t,n){return t in e?Object.defineProperty(e,t,{value:n,enumerable:!0,configurable:!0,writable:!0}):e[t]=n,e}function _toConsumableArray(e){if(Array.isArray(e)){for(var t=0,n=Array(e.length);t<e.length;t++)n[t]=e[t];return n}return Array.from(e)}var _slicedToArray=function(){function e(e,t){var n=[],r=!0,i=!1,o=void 0;try{for(var a,s=e[Symbol.iterator]();!(r=(a=s.next()).done)&&(n.push(a.value),!t||n.length!==t);r=!0);}catch(e){i=!0,o=e}finally{try{!r&&s.return&&s.return()}finally{if(i)throw o}}return n}return function(t,n){if(Array.isArray(t))return t;if(Symbol.iterator in Object(t))return e(t,n);throw new TypeError("Invalid attempt to destructure non-iterable instance")}}(),_typeof="function"==typeof Symbol&&"symbol"==typeof Symbol.iterator?function(e){return typeof e}:function(e){return e&&"function"==typeof Symbol&&e.constructor===Symbol&&e!==Symbol.prototype?"symbol":typeof e};!function(){/**
  * @license almond 0.3.3 Copyright jQuery Foundation and other contributors.
