--- a/HP Labs Main Twine and JS Projects/mcfunkypants/mcf-index.html
+++ b/HP Labs Main Twine and JS Projects/mcfunkypants/mcf-index.html
@@ -16,6 +16,7 @@
     <a id='powerButton' 
         title='Click here to go back.'
         href='javascript:window.history.back();'></a>
+    <div id='hint'></div>
 </div>
 
 <audio id='keyboardSound'><source src="keyboard.mp3" type="audio/mpeg"></audio>
