Linked to lexi intern cubicle from main twine (also renamed filename from spaces to dashes)

--- a/HP Labs Main Twine and JS Projects/index.html
+++ b/HP Labs Main Twine and JS Projects/index.html
@@ -335,6 +335,7 @@ note: there are likely to be other spaces and realms added, but these time shift
 
 No others are here yet, use back option on the left to return
 
+(link: &quot;enter intern Hex&quot;)[(goto-url: &#39;twine_frame.html?phrase=Leave_cubicle&amp;file=LexiGameDev_Cubicle-of-an-intern-version1~&#39;)]
 (link: &quot;Chris cube WIP&quot;)[(goto-url: &#39;unity_loader.html?phrase=Eject_game&amp;file=SpinTest&#39;)]
 (link: &quot;EyeForcz clock outside&quot;)[(goto-url: &#39;unity_loader.html?phrase=Quit_game&amp;file=ClockSpin&amp;param=1&#39;)]
 (link: &quot;EyeForcz clock inside&quot;)[(goto-url: &#39;unity_loader.html?phrase=Quit_game&amp;file=ClockSpin&amp;param=0&#39;)]
@@ -543,7 +544,7 @@ Although most of the vegetation seems to have been allowed to grow where ever an
 
 [[take a closer look at the small garden-&gt;garden]]</tw-passagedata><tw-passagedata pid="36" name="nearHexes" tags="" position="1416,718" size="100,100">You see 4 cubicles along your left, and the bathrooms to your right.
 
-[[enter Name1 Hex-&gt;cubeNear1]]
+(link: &quot;enter intern Hex&quot;)[(goto-url: &#39;twine_frame.html?phrase=Leave_cubicle&amp;file=LexiGameDev_Cubicle-of-an-intern-version1~&#39;)]
 [[enter Name2 Hex-&gt;cubeNear2]]
 [[enter Name3 Hex-&gt;cubeNear3]]
 [[enter Name4 Hex-&gt;cubeNear4]]
@@ -558,7 +559,7 @@ Although most of the vegetation seems to have been allowed to grow where ever an
 [[enter Name2c Hex-&gt;cubeFar2]]
 [[enter Name3c Hex-&gt;cubeFar3]]
 [[enter Name4c Hex-&gt;cubeFar4]]
-[[look for a way to raise the sun shade-&gt;windowShade]]</tw-passagedata><tw-passagedata pid="39" name="cubeNear1" tags="" position="1116,868" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="40" name="cubeNear2" tags="" position="1266,868" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="41" name="cubeNear3" tags="" position="1416,868" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="42" name="cubeNear4" tags="" position="1566,870" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="43" name="bathroom" tags="" position="1716,868" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="44" name="cubeMid1" tags="" position="1351,1163" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="45" name="cubeMid2" tags="" position="1501,1163" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="46" name="cubeMid3" tags="" position="1651,1163" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="47" name="copier" tags="" position="1171,1168" size="100,100">You&#39;re at the copy machine
+[[look for a way to raise the sun shade-&gt;windowShade]]</tw-passagedata><tw-passagedata pid="39" name="cubeNear1 now intern" tags="" position="1279.3333333333335,723" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="40" name="cubeNear2" tags="" position="1266,868" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="41" name="cubeNear3" tags="" position="1416,868" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="42" name="cubeNear4" tags="" position="1566,870" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="43" name="bathroom" tags="" position="1716,868" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="44" name="cubeMid1" tags="" position="1351,1163" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="45" name="cubeMid2" tags="" position="1501,1163" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="46" name="cubeMid3" tags="" position="1651,1163" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="47" name="copier" tags="" position="1171,1168" size="100,100">You&#39;re at the copy machine
 
 [[find some excuse to connect the copier west, to the library-&gt;library]]</tw-passagedata><tw-passagedata pid="48" name="cubeFar1" tags="" position="1113,1475" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="49" name="cubeFar2" tags="" position="1263,1475" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="50" name="cubeFar3" tags="" position="1413,1475" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="51" name="cubeFar4" tags="" position="1563,1475" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="52" name="windowShade" tags="" position="1713,1475" size="100,100">Double-click this passage to edit it.</tw-passagedata></tw-storydata>
 
