Office areas text edited for brevity and computer VO added for them

--- a/HP Labs Main Twine and JS Projects/index.html
+++ b/HP Labs Main Twine and JS Projects/index.html
@@ -407,7 +407,7 @@ You appear to be alone. You&#39;re no more craving other people than food, not a
 
 Do you step forward on the path, or take a moment to rest and breath it in?</tw-passagedata><tw-passagedata pid="15" name="officeStart" tags="wrongVO" position="1751,540" size="100,100">You&#39;re standing at the central kitchen area of an office.
 
-The counter is curved, sleek, white marble top. Fancy instant coffee and expresso machines line the wall, along with a toaster oven. Behind you are two vending machines, one with soda and another with assorted junk food.
+The counter is curved, with a white marble top. A coffee machine and toaster oven sit against the wall. Two vending machines are behind you.
 
 [[check the vending machines-&gt;vendingMachines]]
 
@@ -417,7 +417,7 @@ The counter is curved, sleek, white marble top. Fancy instant coffee and express
 
 [[step straight ahead into the lushly vegetated courtyard-&gt;courtyard]]
 
-&lt;img src=&quot;https://hometeamgamedev.com/hp2/empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;These areas are not yet fleshed out, but just navigation is started. This office area might have a blended Apple/MS or trendy startup vibe. Lots of office plants.&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="16" name="underground" tags="" position="1730,96" size="100,100">You hear clicks of a ratchet, swaying chain links, and low pitch rumble of steel on tile as the soda machine slides aside, revealing an elevator entrance.
+&lt;img src=&quot;https://hometeamgamedev.com/hp2/empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;You\&#39;re standing at the central kitchen area of an office. The counter is curved, with a white marble top. A coffee machine and toaster oven sit against the wall. Two vending machines are behind you.&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="16" name="underground" tags="" position="1730,96" size="100,100">You hear clicks of a ratchet, swaying chain links, and low pitch rumble of steel on tile as the soda machine slides aside, revealing an elevator entrance.
 
 [[Step inside the elevator (to distant future tower)-&gt;futureTower]]</tw-passagedata><tw-passagedata pid="17" name="library" tags="" position="1231,552" size="100,100">was thinking very large library, but maybe more a messy used bookstore horading vibe
 [[Enter book world-&gt;insideBook]]</tw-passagedata><tw-passagedata pid="18" name="garden" tags="" position="1939,898" size="100,100">Hedge maze?
@@ -508,41 +508,47 @@ Rows of empty cubicles are visible through a propped open door.
 
 [[Investigate the office-&gt;officeStart]]
 
-&lt;img src=&quot;https://hometeamgamedev.com/hp2/empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;Your vision comes into focus. The glasses help. You\&#39;re in the reception area of an office. Rows of empty cubicles are visible through a propped open door.&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="32" name="officeNToyRoom" tags="" position="1928,573" size="100,100">There&#39;s a bizarrely huge boomerang hanging on a wall.
+&lt;img src=&quot;https://hometeamgamedev.com/hp2/empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;Your vision comes into focus. The glasses help. You\&#39;re in the reception area of an office. Rows of empty cubicles are visible through a propped open door.&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="32" name="officeNToyRoom" tags="" position="1928,573" size="100,100">There&#39;s a giant boomerang hanging on a wall, maybe 6 feet across.
 
-Several orange gel ant farms adorn the shelves, with the insects inside hard at work.
+Orange gel ant farms line the shelves. Bugs inside are hard at work.
 
-You see boxes left around of building blocks, wooden shapes, plastic army figures, and toy cars with conflicting sizes and styles.
+Scattered about you see wooden building blocks, plastic army figures, and toy cars of different sizes. The toys on the center table are arranged like two teams facing off, hidden behind obstacles for cover.
 
-Posters cover the walls - of kids movies, TV shows you haven&#39;t heard of, ads for classic video and board games.
+Posters cover the walls - for kid movies, TV shows you haven&#39;t heard of, and ads for classic games.
 
-In the center of the room is a table, with toys lined up on opposing sides as if they&#39;re preparing to battle. In the center of the tiny battlefield stands a tall, futuristic robot mech toy, towering over the other figures.
+[[leave to the science lab-&gt;lab]]
 
-[[leave to the science lab-&gt;lab]]</tw-passagedata><tw-passagedata pid="33" name="vendingMachines" tags="" position="1721,390" size="100,100">Like most soda machines, it&#39;s all the same brand. Two entire rows are energy drinks, a few options are diet, and there&#39;s at least one brightly colored sweet drink maybe meant for when someone takse their kid to work.
+&lt;img src=&quot;https://hometeamgamedev.com/hp2/empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;There\&#39;s a giant boomerang hanging on a wall, maybe 6 feet across. Orange gel ant farms line the shelves. Bugs inside are hard at work. Scattered about you see wooden building blocks, plastic army figures, and toy cars of different sizes. The toys on the center table are arranged like two teams facing off, hidden behind obstacles for cover. Posters cover the walls - for kid movies, TV shows you haven\&#39;t heard of, and ads for classic games.&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="33" name="vendingMachines" tags="" position="1721,390" size="100,100">One dispenses soda. The top two rows are energy drinks. At the bottom is a bright orange drink for kids. The machine hums as it stays cold.
 
-The junk food includes &quot;healthy&quot;(-ier?) chips, cheese-dusted puffs, candy bars, and a few kinds of trail mix.
+The other machine has junk food, including chips labeled as healthy, cheese puffs, candy bars, and trail mix.
 
-The prices are too high, but you don&#39;t have your wallet, anyway. The machines are lit inside, with a refridgerator hum coming from the soda one.
+You&#39;re tempted, but you don&#39;t have your wallet.
 
-A blue on black LCD on the soda machine scrolls with the text, &quot;CANCEL?&quot;
+A blue on black display on the soda machine reads, &quot;CANCEL?&quot;
 
-[[mess with the coin return-&gt;underground]]</tw-passagedata><tw-passagedata pid="34" name="cubicles" tags="" position="1566,568" size="100,100">It&#39;s a bit tough to tell, since the cubicles are hexes instead of squares, and just a tad too tall to comfortably see over well, but there seem to be 3 distinct rows.
+[[mess with the coin return-&gt;underground]]
+
+&lt;img src=&quot;https://hometeamgamedev.com/hp2/empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;One dispenses soda. The top two rows are energy drinks. At the bottom is a bright orange drink for kids. The machine hums as it stays cold. The other machine has junk food, including chips labeled as healthy, cheese puffs, candy bars, and trail mix. You\&#39;re tempted, but you don\&#39;t have your wallet. A blue on black display on the soda machine reads, CANCEL?&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="34" name="cubicles" tags="" position="1566,568" size="100,100">There are 3 distinct rows.
 
 [[walk down the near row, near the bathroom entrance-&gt;nearHexes]]
 
 [[walk down the center row, past the copier-&gt;midHexes]]
 
-[[walk down the far row, along the windows-&gt;farHexes]]</tw-passagedata><tw-passagedata pid="35" name="courtyard" tags="" position="1751,690" size="100,100">The first thing you notice is a hazy shadow on you, inconsistent with the clear midday sky over head. It&#39;s coming from a net mesh over the whole courtyard, perhaps to keep birds from getting in, or maybe to keep all these pretty butterflies from getting out.
+[[walk down the far row, along the windows-&gt;farHexes]]
 
-You hear water dribbling, and notice an artificial stream dividing the space, with a small white wooden bridge to cross it.
+&lt;img src=&quot;https://hometeamgamedev.com/hp2/empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;There are 3 distinct rows.&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="35" name="courtyard" tags="" position="1751,690" size="100,100">There&#39;s a clear midday sky overhead, but everything has a hazy shadow from a mesh net covering the courtyard.
 
-The tree trunks are adorned with string lights, but they&#39;re either off or too weak to see in this much daylight. The temperature&#39;s comfortable enough that you don&#39;t think it&#39;s December, but this also uncomfortably reminds you that you&#39;re not entirely sure what latitude you&#39;re at.
+You hear dribbling water of a small stream dividing the space. Flat white rocks are spaced to cross it.
 
-A few stone benches have a small golden plaque at top of the back center, which you can&#39;t read from here, but look like they&#39;re probably honoring donations or in memory of people.
+The trees are adorned with string lights. It&#39;s warm enough you don&#39;t think it&#39;s winter. This reminds you that you have no clue where you are.
 
-Although most of the vegetation seems to have been allowed to grow where ever and how ever it wanted, in one corner a particularly tidy, well-kept garden stands out.
+A pair of stone benches have small bronze plaques, like about donations or in memory of people.
 
-[[take a closer look at the small garden-&gt;garden]]</tw-passagedata><tw-passagedata pid="36" name="nearHexes" tags="" position="1416,718" size="100,100">You see 4 cubicles along your left, and the bathrooms to your right.
+In one corner is a particularly tidy garden.
+
+[[take a closer look at the small garden-&gt;garden]]
+
+&lt;img src=&quot;https://hometeamgamedev.com/hp2/empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;There\&#39;s a clear midday sky overhead, but everything has a hazy shadow from a mesh net covering the courtyard. You hear dribbling water of a small stream dividing the space. Flat white rocks are spaced to cross it. The trees are adorned with string lights. It\&#39;s warm enough you don\&#39;t think it\&#39;s winter. This reminds you that you have no clue where you are. A pair of stone benches have small bronze plaques, like about donations or in memory of people. In one corner is a particularly tidy garden.&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="36" name="nearHexes" tags="" position="1416,718" size="100,100">You see 4 cubicles along your left, and the bathrooms to your right.
 
 (link: &quot;enter intern Hex&quot;)[(goto-url: &#39;twine_frame.html?phrase=Leave_cubicle&amp;file=LexiGameDev_Cubicle-of-an-intern-version1~&#39;)]
 [[enter Name2 Hex-&gt;cubeNear2]]
