--- a/HP Labs Main Twine and JS Projects/ashleigh/library.html
+++ b/HP Labs Main Twine and JS Projects/ashleigh/library.html
@@ -13,20 +13,32 @@
 
 <tw-storydata name="&quot;library&quot;" startnode="1" creator="Twine" creator-version="2.3.7" ifid="2FE16135-6318-465E-9C1A-D2A296D4A63D" zoom="1" format="Harlowe" format-version="3.1.0" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Untitled Passage" tags="" position="583,242.5" size="100,100">(first pass)
 
-You&#39;ve arrived in what appears to be a sun room,
-though most of the sun is blocked by bookshelves that span from floor to ceiling. 
+You&#39;ve arrived in what appears to be a [[sun room]]; beams of light peer through bookshelves that span from floor to ceiling.
 The room can&#39;t be larger than a studio apartment, but the shelves live in a surpsingly maze-like arrangement. 
-beams of light peer through the spaces between the books.
 
-[[make your way through a few shelves]]
+[[make your way through a few shelves]]</tw-passagedata><tw-passagedata pid="2" name="make your way through a few shelves" tags="" position="583,392.5" size="100,100">In the heart of the room, you find a plywood board laid across two shelves. 
+On it lies a small matress and a few sheets
+it&#39;s a bed, but it doesn&#39;t even qualify as a twin. 
+If the person who sleeps in this room were to toss or turn, they would probably fall off. 
 
-In the heart of the room, you find a plywood board laid across two shelves. 
-on it lies a small matress and a few sheets
-it&#39;s a bed, but it doesn&#39;t even qualifiy as a twin. 
+A two books are strewn carelessly on the bed. [[&quot;The Shallows&quot;]] and [[&quot;The Heart is Deceitful above all things&quot;]]
+</tw-passagedata><tw-passagedata pid="3" name="sun room" tags="" position="703,392.5" size="100,100">You peer through the book shelves and can see windows. Tall, thin, and spaced tightly together, they make up most of the outer wall. Outside is a quiet tree dotted suburb street. [[look at the right wall]]
 
-there&#39;s a book...&quot;the heart is decietful above all things&quot;
-a page is bookmarked. (passage about not hiding in a closet)
-[enter book]</tw-passagedata><tw-passagedata pid="2" name="make your way through a few shelves" tags="" position="583,392.5" size="100,100">Double-click this passage to edit it.</tw-passagedata></tw-storydata>
+[[look at the left wall]]</tw-passagedata><tw-passagedata pid="4" name="&quot;The Shallows&quot;" tags="" position="508,542.5" size="100,100">A few pages are bookmarked 
+
+(ashleigh - going to leave a few in here, there are some fun quotes on neurology and memory, but the one I&#39;m leaving in here right now could open to another world )
+
+[[page 185]]</tw-passagedata><tw-passagedata pid="5" name="&quot;The Heart is Deceitful above all things&quot;" tags="" position="658,542.5" size="100,100">page 222 is bookmarked:
+
+Firemen always come round the trailer parks and let the kids scamper across their trucks, try on oversized rubber boots, ring the brass bell...and they always make you repeat, &#39;in a fire, you drop and crawl out, in a fire you drop and crawl out....YOU NEVER HIDE IN A CLOSET, YOU NEVER HIDE IN A CLOSET.
+
+lower on the page is another passage underlined in red. &quot;The closet is a world of safety and to undo that you need a whole heck of a lot more than a sticker promising deputy firefighter status.&quot;</tw-passagedata><tw-passagedata pid="6" name="page 185" tags="" position="508,692.5" size="100,100">Underlined in red is the passage &quot;The fact that, even after a memory is forgoten, the number of synapses remains a bit higher than it had been originally helps explain why it&#39;s easier to learn something a second time&quot;
+
+Under this passage is a delta symbol drawn in sharpie. the lines seem to be breathing. 
+
+(open to world of memory??? totally ok with someone taking over at this point, exquistite corpse style)</tw-passagedata><tw-passagedata pid="7" name="look at the right wall" tags="" position="862,412.5" size="100,100">you can see an four way intersection, with streets leaving their meeting point at odd angles, like 4 friends meeting and returning back to their own lives. 
+
+It doesn&#39;t look like the outside of the building you&#39;re in. </tw-passagedata><tw-passagedata pid="8" name="look at the left wall" tags="" position="858,265.5" size="100,100">Double-click this passage to edit it.</tw-passagedata></tw-storydata>
 
 <script title="Twine engine code" data-main="harlowe">"use strict";function _defineProperty(e,t,n){return t in e?Object.defineProperty(e,t,{value:n,enumerable:!0,configurable:!0,writable:!0}):e[t]=n,e}function _toConsumableArray(e){if(Array.isArray(e)){for(var t=0,n=Array(e.length);t<e.length;t++)n[t]=e[t];return n}return Array.from(e)}var _slicedToArray=function(){function e(e,t){var n=[],r=!0,i=!1,o=void 0;try{for(var a,s=e[Symbol.iterator]();!(r=(a=s.next()).done)&&(n.push(a.value),!t||n.length!==t);r=!0);}catch(e){i=!0,o=e}finally{try{!r&&s.return&&s.return()}finally{if(i)throw o}}return n}return function(t,n){if(Array.isArray(t))return t;if(Symbol.iterator in Object(t))return e(t,n);throw new TypeError("Invalid attempt to destructure non-iterable instance")}}(),_typeof="function"==typeof Symbol&&"symbol"==typeof Symbol.iterator?function(e){return typeof e}:function(e){return e&&"function"==typeof Symbol&&e.constructor===Symbol&&e!==Symbol.prototype?"symbol":typeof e};!function(){/**
  * @license almond 0.3.3 Copyright jQuery Foundation and other contributors.
