z-modem file transfer of secret quest file implemented

--- a/HP Labs Main Twine and JS Projects/mcfunkypants/mcf-index.html
+++ b/HP Labs Main Twine and JS Projects/mcfunkypants/mcf-index.html
@@ -281,5 +281,22 @@ ASCII art kindly provided by roy/sac (CC0):
 DTC, DNS, DMN, DLX, CTK, NUM, MP3
 </pre>
 
+<pre id='UPLOAD'>
+▄▀ Initiating 1200 baud zModem data transfer ▀▄
+▀▄ h.256 CRC error checking protocols active ▄▀
+
+Enter local filename: 
+</pre>
+
+<pre id='DB01.TXT'>
+█▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀█▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀█
+█ z-Modem file transfer █ Filename: DB01.TXT █
+█▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄█▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄█
+0%.......25%........50%........75%........100%
+░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
+░ Download complete! Payload size 1281 bytes ░
+░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
+</pre>
+
 </body>
 </html>
