--- a/HP Labs Main Twine and JS Projects/kornel/kornel-index.html
+++ b/HP Labs Main Twine and JS Projects/kornel/kornel-index.html
@@ -11,7 +11,7 @@
 
 <tw-story></tw-story>
 
-<tw-storydata name="Bomb" startnode="1" creator="Twine" creator-version="2.3.6" ifid="A6BB2127-2849-44DB-8AE7-A5EF99C3BCCC" zoom="1" format="Harlowe" format-version="3.1.0" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Start Point" tags="" position="823,156" size="100,100">(set: $seconds to 10)
+<tw-storydata name="Bomb" startnode="1" creator="Twine" creator-version="2.3.7" ifid="A6BB2127-2849-44DB-8AE7-A5EF99C3BCCC" zoom="1" format="Harlowe" format-version="3.1.0" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Start Point" tags="" position="822,156" size="100,100">(set: $seconds to 10)
 
 &#39;**DO SOMETHING!**&#39;
 You hear a scream in your left ear.
@@ -20,27 +20,27 @@ You hear a scream in your left ear.
 You see a box before you.
 
 [[Take a look at the box -&gt; Box]]
-[[Open the box -&gt;Open Armed]]</tw-passagedata><tw-passagedata pid="2" name=" Box" tags="" position="810,364" size="100,100">(set: $seconds to $seconds - 1)
+[[Open the box -&gt;Open Armed]]</tw-passagedata><tw-passagedata pid="2" name=" Box" tags="" position="809,364" size="100,100">(set: $seconds to $seconds - 1)
 
 The box is (css: &quot;font-size: 80%;&quot;)[small]. The lit seem to open. It&#39;s made out of wood.
 
 Unremarkable in almost every way except for a small bump on a side. Noticeable only by touch. No larger then a peny.
 
-And a counter on top of the lit. (css: &quot;font-size: 120%;&quot;)[Large] LED display. **Bold** (colour: &quot;#e61919&quot;)[red] numbers counting down: (colour: &quot;#e61919&quot;)[**$seconds**].
+And a counter on top of the lit. (css: &quot;font-size: 120%;&quot;)[Large] LED display with **bold** (colour: &quot;#e61919&quot;)[red] numbers counting down: (colour: &quot;#e61919&quot;)[**$seconds**].
 
 [[Put it back -&gt; Table]]
-[[Press the small bump on the side -&gt; Bump]]</tw-passagedata><tw-passagedata pid="3" name="Open Armed" tags="" position="949,363" size="100,100">(css: &quot;font-size: 150%;&quot;)[(colour: &quot;#e61919&quot;)[**BOOM!!!**]]
+[[Press the small bump on the side -&gt; Bump]]</tw-passagedata><tw-passagedata pid="3" name="Open Armed" tags="" position="948,363" size="100,100">(css: &quot;font-size: 150%;&quot;)[(colour: &quot;#e61919&quot;)[**BOOM!!!**]]
 
-*[[Restart the game -&gt; Start Point]]*</tw-passagedata><tw-passagedata pid="4" name=" Table" tags="" position="713,551" size="100,100">(set: $seconds to $seconds - 1)
+*[[Restart the game -&gt; Start Point]]*</tw-passagedata><tw-passagedata pid="4" name=" Table" tags="" position="712,551" size="100,100">(set: $seconds to $seconds - 1)
 
 You place the box gently on the table. The display shows: (colour: &quot;#e61919&quot;)[**$seconds**].
 
 [[Take a look at the box -&gt; Box]]
-[[Open the box -&gt;Open Armed]]</tw-passagedata><tw-passagedata pid="5" name=" Bump" tags="" position="885,549" size="100,100">(set: $seconds to $seconds - 1)
+[[Open the box -&gt;Open Armed]]</tw-passagedata><tw-passagedata pid="5" name=" Bump" tags="" position="884,549" size="100,100">(set: $seconds to $seconds - 1)
 
 You pressed the *small bump* and hear a quiet &#39;click&#39;.
 
-[[Put the box on the table -&gt; Table Unarmed]]</tw-passagedata><tw-passagedata pid="6" name=" Start Point" tags="" position="944,156" size="100,100">(set: $seconds to 10)
+[[Put the box on the table -&gt; Table Unarmed]]</tw-passagedata><tw-passagedata pid="6" name=" Start Point" tags="" position="943,156" size="100,100">(set: $seconds to 10)
 
 &#39;**DO SOMETHING!**&#39;
 You hear a scream in your left ear.
@@ -49,33 +49,33 @@ You hear a scream in your left ear.
 You see a box before you.
 
 [[Take a look at the box -&gt; Box]]
-[[Open the box -&gt;Open Armed]]</tw-passagedata><tw-passagedata pid="7" name=" Table Unarmed" tags="" position="1038,547" size="100,100">(set: $seconds to $seconds - 1)
+[[Open the box -&gt;Open Armed]]</tw-passagedata><tw-passagedata pid="7" name=" Table Unarmed" tags="" position="1037,547" size="100,100">(set: $seconds to $seconds - 1)
 
 You place the box gently on the table. The display shows: (colour: &quot;#e61919&quot;)[**$seconds**].
 
-[[Open the box -&gt; Open Unarmed]]</tw-passagedata><tw-passagedata pid="8" name=" Open Unarmed" tags="" position="1043,694" size="100,100">(set: $seconds to $seconds - 1)
+[[Open the box -&gt; Open Unarmed]]</tw-passagedata><tw-passagedata pid="8" name=" Open Unarmed" tags="" position="1042,694" size="100,100">(set: $seconds to $seconds - 1)
 
 Inside you see a bunch of wires. The display shows: (colour: &quot;#e61919&quot;)[**$seconds**]. What now?
 
 [[Cut the blue wire -&gt; Wire Blue]]
 [[Cut the green wire -&gt; Wire Green]]
-[[Cut the red wire -&gt;Open Armed]] </tw-passagedata><tw-passagedata pid="9" name=" Wire Blue" tags="" position="893,844" size="100,100">(set: $seconds to $seconds - 1)
+[[Cut the red wire -&gt;Open Armed]] </tw-passagedata><tw-passagedata pid="9" name=" Wire Blue" tags="" position="892,844" size="100,100">(set: $seconds to $seconds - 1)
 
 Nothing happened. Which is most likely good. The display shows: (colour: &quot;#e61919&quot;)[**$seconds**]. What now?
 
 [[Cut the green wire -&gt; Only Red]]
-[[Cut the red wire -&gt;Open Armed]] </tw-passagedata><tw-passagedata pid="10" name=" Wire Green" tags="" position="1043,844" size="100,100">(set: $seconds to $seconds - 1)
+[[Cut the red wire -&gt;Open Armed]] </tw-passagedata><tw-passagedata pid="10" name=" Wire Green" tags="" position="1042,844" size="100,100">(set: $seconds to $seconds - 1)
 
 Nothing happened. Which is most likely good. The display shows: (colour: &quot;#e61919&quot;)[**$seconds**]. What now?
 
 [[Cut the blue wire -&gt; Only Red]]
-[[Cut the red wire -&gt;Open Armed]] </tw-passagedata><tw-passagedata pid="11" name=" Only Red" tags="" position="968,1012" size="100,100">(set: $seconds to $seconds - 1)
+[[Cut the red wire -&gt;Open Armed]]</tw-passagedata><tw-passagedata pid="11" name=" Only Red" tags="" position="967,1012" size="100,100">(set: $seconds to $seconds - 1)
 
 (colour: &quot;#e61919&quot;)[**$seconds**] seconds shown on the display and only one thing to do...
 
-[[Cut the red wire -&gt; Wire Red]]</tw-passagedata><tw-passagedata pid="12" name=" Wire Red" tags="" position="968,1162" size="100,100">(set: $seconds to $seconds - 1)
+[[Cut the red wire -&gt; Wire Red]]</tw-passagedata><tw-passagedata pid="12" name=" Wire Red" tags="" position="967,1162" size="100,100">(set: $seconds to $seconds - 1)
 
-The display stopped changing, stuck on: (colour: &quot;#e61919&quot;)[**$seconds**]. The voice in the headphones started to talk again. But you aren&#39;t paying attention to it. You feel a scence of pride and relief. And a gentle but strong pull inside your body. Job well done. You can move on to other adventure.</tw-passagedata></tw-storydata>
+The display stopped changing, stuck on: (colour: &quot;#e61919&quot;)[**$seconds**]. The voice in the headphones started to talk again. But you aren&#39;t paying attention to it. You feel a scence of pride and relief. And a gentle but strong pull inside your body. Job well done. You can move on to other adventures.</tw-passagedata></tw-storydata>
 
 <script title="Twine engine code" data-main="harlowe">"use strict";function _defineProperty(e,t,n){return t in e?Object.defineProperty(e,t,{value:n,enumerable:!0,configurable:!0,writable:!0}):e[t]=n,e}function _toConsumableArray(e){if(Array.isArray(e)){for(var t=0,n=Array(e.length);t<e.length;t++)n[t]=e[t];return n}return Array.from(e)}var _slicedToArray=function(){function e(e,t){var n=[],r=!0,i=!1,o=void 0;try{for(var a,s=e[Symbol.iterator]();!(r=(a=s.next()).done)&&(n.push(a.value),!t||n.length!==t);r=!0);}catch(e){i=!0,o=e}finally{try{!r&&s.return&&s.return()}finally{if(i)throw o}}return n}return function(t,n){if(Array.isArray(t))return t;if(Symbol.iterator in Object(t))return e(t,n);throw new TypeError("Invalid attempt to destructure non-iterable instance")}}(),_typeof="function"==typeof Symbol&&"symbol"==typeof Symbol.iterator?function(e){return typeof e}:function(e){return e&&"function"==typeof Symbol&&e.constructor===Symbol&&e!==Symbol.prototype?"symbol":typeof e};!function(){/**
  * @license almond 0.3.3 Copyright jQuery Foundation and other contributors.
